--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="mt-12 text-center">
-            <a href="/news-full.html"
+            <a href="/src/pages/news-full.html"
                 class="inline-flex items-center gap-3 text-white/50 border border-white/10 px-8 py-4 uppercase text-[10px] font-black tracking-widest hover:bg-red-600 hover:text-white hover:border-red-600 transition-all">
                 <span data-i18n="materials.all_news">Усе навіны</span>
                 <i class="fa-solid fa-arrow-right"></i>
