refactor: migrate mobile menu to pure tailwind and unify global styles

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,22 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap");
 @import "tailwindcss";
-@import "./sections/mobile-menu.css";
+
+/* Базавыя стылі і кампаненты */
+@import "./style.css";
+
+/* Спецыфічныя стылі секцый (пакуль ты іх не перапісаў на Tailwind) */
 @import "./sections/hero.css";
 @import "./sections/header.css";
 @import "./sections/news.css";
 @import "/src/css/pages/zarok-vajara.css";
 @import "/src/css/pages/gallery.css";
-/* @import "/src/css/pages/reports.css";
-@import "/src/css/pages/news-full.css";
-@import "/src/css/pages/contacts.css";
-@import "/src/css/sections/sidebar.css";
-@import "/src/css/sections/about.css";
-@import "/src/css/sections/footer.css"; */
 @import "/src/css/modal.css";
-
-
-@layer base {
-    @import "./reset.css";
-    @import "./style.css";
-    @import "./grid.css";
-}
