--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,71 +1,63 @@
-html,
-body {
-  background-color: #1a1a1a;
-  margin: 0;
-  padding: 0;
-}
+/* Падключаем шрыфт */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap");
 
-body {
-  font-family: "Inter", sans-serif;
-  line-height: 1.5;
-  color: #ffffff;
-}
+@layer components {
 
-main {
-  display: block;
-}
-
-.section-spacing {
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-.section-title {
-  font-weight: 900;
-  text-transform: uppercase;
-  font-style: italic;
-  line-height: 1.1;
-  color: #ffffff;
-  font-size: 22px;
-
-}
-
-
-.swiper-wrapper {
-  display: flex !important;
-}
-
-.swiper-slide {
-  height: auto !important;
-  display: flex !important;
-}
-
-.swiper-slide>div {
-  width: 100%;
-}
-
-@media (min-width: 768px) {
-
-
-  .section-title {
-    font-size: 32px;
-    white-space: normal;
+  /* КАНТЭЙНЕР */
+  .container-custom {
+    @apply mx-auto px-5 w-full;
+    max-width: 100vw;
   }
 
-  .section-spacing {
-    padding-top: 60px;
-    padding-bottom: 60px;
+
+  @media (min-width: 350px) {
+    .container-custom {
+      width: 350px;
+    }
   }
-}
 
+  @media (min-width: 768px) {
+    .container-custom {
+      width: 768px;
+      @apply px-9;
+    }
 
-@media (min-width: 1280px) {
+    .section-spacing {
+      @apply py-[60px];
+    }
+
+    .section-title {
+      @apply text-[32px];
+    }
+  }
+
+  @media (min-width: 1280px) {
+    .container-custom {
+      width: 1280px;
+      @apply px-[60px];
+    }
+
+    .section-spacing {
+      @apply py-20;
+    }
+
+    .section-title {
+      @apply text-[48px];
+    }
+  }
+
+  /* Базавыя параметры секцый для мабілак (па змаўчанні) */
   .section-spacing {
-    padding-top: 80px;
-    padding-bottom: 80px;
+    @apply py-10;
   }
 
   .section-title {
-    font-size: 48px;
+    @apply text-[22px] font-black uppercase italic leading-[1.1] text-white font-sans;
+  }
+}
+
+@layer base {
+  body {
+    @apply bg-black font-sans text-white antialiased;
   }
 }
