--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,11 +1,11 @@
 <div id="mobile-menu-overlay"
-    class="fixed inset-0 top-32 bg-[#1a1a1a]/60 z-90 hidden opacity-0 transition-opacity duration-300 backdrop-blur-sm pointer-events-auto xl:hidden">
+    class="fixed inset-0 top-32 bg-[#1a1a1a]/60 z-[90] hidden opacity-0 transition-opacity duration-300 backdrop-blur-sm pointer-events-auto xl:hidden">
 </div>
 
-<div id="mobile-menu-wrapper" class="fixed top-32 inset-x-0 z-100 flex justify-center pointer-events-none xl:hidden">
+<div id="mobile-menu-wrapper" class="fixed top-32 inset-x-0 z-[100] flex justify-center pointer-events-none xl:hidden">
 
     <div id="mobile-menu"
-        class=" w-87.5 md:w-175 bg-[#1a1a1a] shadow-2xl flex flex-col transition-transform duration-300 -translate-y-[120%] border-l border-white/5 overflow-hidden pointer-events-auto h-[calc(100vh-128px)]">
+        class="w-87.5 md:w-175 bg-[#1a1a1a] shadow-2xl flex flex-col transition-transform duration-300 -translate-y-[120%] border-l border-white/5 overflow-hidden pointer-events-auto h-[calc(100vh-128px)]">
 
         <div class="pt-6 pr-6 flex justify-end shrink-0">
             <button id="close-mobile-menu"
@@ -48,7 +48,6 @@
 
                         <a href="/#news" data-i18n="nav.news"
                             class="js-nav-link hover:text-red-600 transition-colors py-3 px-2 w-full">Навіны</a>
-
 
                         <div class="group relative py-2 w-full">
                             <a href="/#volunteers"
