--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -24,24 +24,24 @@
                         <div class="group relative py-2 w-full">
                             <a href="/#about"
                                 class="js-nav-link hover:text-red-600 px-2 py-2 transition-colors flex items-start gap-1 whitespace-nowrap">
-                                Пра фонд
+                                <span data-i18n="nav.about">Пра фонд</span>
                             </a>
                             <div class="static w-full bg-[#1a1a1a] border border-white/5 mt-1">
-                                <a href="/src/pages/projects.html"
+                                <a href="/src/pages/projects.html" data-i18n="nav.projects"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Праекты</a>
-                                <a href="/src/pages/history.html"
+                                <a href="/src/pages/history.html" data-i18n="nav.history_long"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Гістарычны
                                     экскурс</a>
-                                <a href="/src/pages/reports.html"
+                                <a href="/src/pages/reports.html" data-i18n="nav.reports"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Справаздачы</a>
-                                <a href="/src/pages/materials.html"
+                                <a href="/src/pages/materials.html" data-i18n="nav.materials"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Матэрыялы</a>
-                                <a href="/src/pages/contacts.html" data-i18n="nav.contacts"
+                                <a href="/src/pages/contacts.html" data-i18n="nav.requisites"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Рэквізіты</a>
-                                <a href="/src/pages/zarok-vajara.html"
+                                <a href="/src/pages/zarok-vajara.html" data-i18n="nav.vow"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Зарок
                                     ваяра</a>
-                                <a href="/src/pages/gallery.html"
+                                <a href="/src/pages/gallery.html" data-i18n="nav.gallery"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600">Галерэя</a>
                             </div>
                         </div>
@@ -50,20 +50,21 @@
                             class="js-nav-link hover:text-red-600 transition-colors py-3 px-2 w-full">Навіны</a>
 
                         <div class="group relative py-2 w-full">
-                            <a href="/#volunteers"
-                                class="js-nav-link hover:text-red-600 flex items-center gap-1 px-2">Дапамога</a>
+                            <a href="/#volunteers" class="js-nav-link hover:text-red-600 flex items-center gap-1 px-2">
+                                <span data-i18n="nav.help">Дапамога</span>
+                            </a>
                             <div class="static w-full bg-[#1a1a1a] border border-white/5 mt-1">
-                                <a href="/src/pages/get-help.html"
+                                <a href="/src/pages/get-help.html" data-i18n="nav.get_help"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Атрымаць
                                     дапамогу</a>
-                                <a href="/src/pages/donate.html"
+                                <a href="/src/pages/donate.html" data-i18n="nav.be_partner"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600">Дапамагчы
                                     | Стаць партнёрам</a>
                             </div>
                         </div>
 
                         <div class="w-full pt-6 pb-8 px-2">
-                            <a href="/#donate" data-i18n="nav.donate"
+                            <a href="/#donate" data-i18n="nav.support"
                                 class="js-nav-link block w-full text-center bg-red-600 text-white py-4 hover:bg-white hover:text-black transition-all shadow-lg">
                                 Падтрымаць
                             </a>
